--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "BinLu Web App",
-    "name": "BinLu Web App",
+    "short_name": "BinLu",
+    "name": "BinLu",
     "icons": [{
         "src": "favicon.ico",
         "sizes": "64x64 32x32 24x24 16x16",
